[package]
name = "download_gutenberg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.20.1", features=["full"]}
reqwest = "0.11.11"
scraper = "0.13.0"
futures = "0.3.24"
regex = "1.6.0"
colored = "2.0.0"
clap = {version="3.2.20", features=["derive"]}
lazy_static = "1.4.0"